--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "websocket-extensions": "^0.1.4"
+    "websocket-extensions": "0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
